remove apply link and fixing up schedule item alignment for desktop

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -698,6 +698,7 @@ form {
 
 			span {
 				margin-top:0;
+				text-align:left;
 			}
 		}
 	}
